First version (dirty) for configuration load

--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -1,6 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="watchDogConfigurationSection" type="WatchDogService.Configuration.WatchDogConfigurationSection, WatchDogService"/>
+  </configSections>
+
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+
+
+  <watchDogConfigurationSection>
+    <WindowsServiceWatchersSection>
+
+      <add Name="Temas watcher" ServiceName="asdasd" RefreshTimeInSeconds="35">
+        <ContingenceActionsSection>
+          <add Name="Log file 1" Type="LogFileAction" FileName="C:\Users\jcerve14\Desktop\LogX.txt" MessageLayout="%date: %name is not working"></add>
+          <add Name="Log file 2" Type="LogFileAction" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></add>
+          <add Name="Console Log" Type="ConsoleAction" MessageLayout="%date - Console message: %name is not working"></add>
+        </ContingenceActionsSection>
+      </add>
+
+
+    </WindowsServiceWatchersSection>
+
+  </watchDogConfigurationSection>
+
 </configuration>
