Improved configuration process

--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -9,20 +9,16 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
 
-
   <watchDogConfigurationSection>
-    <WindowsServiceWatchersSection>
-
-      <add Name="Temas watcher" ServiceName="asdasd" RefreshTimeInSeconds="35">
-        <ContingenceActionsSection>
-          <add Name="Log file 1" Type="LogFileAction" FileName="C:\Users\jcerve14\Desktop\LogX.txt" MessageLayout="%date: %name is not working"></add>
-          <add Name="Log file 2" Type="LogFileAction" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></add>
-          <add Name="Console Log" Type="ConsoleAction" MessageLayout="%date - Console message: %name is not working"></add>
+    <Watchers>
+      <add Type="WatchDogService.Watchers.WindowsServiceWatcher, WatchDogService" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="35">
+        <ContingenceActionsSection>         
+          <add Name="Log file 2" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></add>
+          <add Name="Console Log" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></add>
         </ContingenceActionsSection>
       </add>
 
-
-    </WindowsServiceWatchersSection>
+    </Watchers>
 
   </watchDogConfigurationSection>
 
