Added host watcher

--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -11,15 +11,21 @@
 
   <watchDogConfigurationSection>
     <Watchers>
-      <add Type="WatchDogService.Watchers.WindowsServiceWatcher, WatchDogService" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="35">
-        <ContingenceActionsSection>         
-          <add Name="Log file 2" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></add>
-          <add Name="Console Log" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></add>
+
+      <Watcher Type="WatchDogService.Watchers.WindowsServiceWatcher, WatchDogService" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="10">
+        <ContingenceActionsSection>
+          <Action Name="Log file 2" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
+          <Action Name="Console Log" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></Action>
         </ContingenceActionsSection>
-      </add>
+      </Watcher>
+
+      <Watcher Type="WatchDogService.Watchers.HostWatcher, WatchDogService" HostAddress ="192.0.0.1" Name="localhost watcher" RefreshTimeInSeconds="20">
+        <ContingenceActionsSection>
+          <Action Name="Console Log 2" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not up and running"></Action>
+        </ContingenceActionsSection>
+      </Watcher>     
 
     </Watchers>
-
   </watchDogConfigurationSection>
 
 </configuration>
