--- a/WatchDogService/WatchDogService.csproj
+++ b/WatchDogService/WatchDogService.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ContingenceActions\ConsoleAction.cs" />
     <Compile Include="ContingenceActions\ContingenceAction.cs" />
     <Compile Include="ContingenceActions\LogFileAction.cs" />
+    <Compile Include="Watchers\HostWatcher.cs" />
     <Compile Include="Watchers\StatusWatcher.cs" />
     <Compile Include="Watchers\WindowsServiceWatcher.cs" />
     <Compile Include="Services\Implementations\ConfigurationService.cs" />
@@ -70,7 +71,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
