--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -14,14 +14,14 @@
 
       <Watcher Type="WatchDogService.Watchers.WindowsServiceWatcher, WatchDogService" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="10">
         <ContingenceActionsSection>
-          <Action Name="Log file 2" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
-          <Action Name="Console Log" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></Action>
+          <Action Name="Log file action" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
+          <Action Name="Console Log action" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></Action>
         </ContingenceActionsSection>
       </Watcher>
 
       <Watcher Type="WatchDogService.Watchers.HostWatcher, WatchDogService" HostAddress ="192.0.0.1" Name="localhost watcher" RefreshTimeInSeconds="20">
         <ContingenceActionsSection>
-          <Action Name="Console Log 2" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not up and running"></Action>
+          <Action Name="Console Log action 2" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not up and running"></Action>
         </ContingenceActionsSection>
       </Watcher>     
 
