Fix on App.config

--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="watchDogConfigurationSection" type="WatchDogService.Configuration.WatchDogConfigurationSection, WatchDogService"/>
+    <section name="watchDogConfigurationSection" type="WatchDog.Configuration.WatchDogConfigurationSection, WatchDog"/>
   </configSections>
 
 
@@ -12,16 +12,16 @@
   <watchDogConfigurationSection>
     <Watchers>
 
-      <Watcher Type="WatchDogService.Watchers.WindowsServiceWatcher, WatchDogService" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="10">
+      <Watcher Type="WatchDog.Watchers.WindowsServiceWatcher, WatchDog" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="10">
         <ContingenceActionsSection>
-          <Action Name="Log file action" Type="WatchDogService.ContingenceActions.LogFileAction, WatchDogService" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
-          <Action Name="Console Log action" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not working"></Action>
+          <Action Name="Log file action" Type="WatchDog.ContingenceActions.LogFileAction, WatchDog" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
+          <Action Name="Console Log action" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not working"></Action>
         </ContingenceActionsSection>
       </Watcher>
 
-      <Watcher Type="WatchDogService.Watchers.HostWatcher, WatchDogService" HostAddress ="192.0.0.1" Name="localhost watcher" RefreshTimeInSeconds="20">
+      <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.1" Name="localhost watcher" RefreshTimeInSeconds="20">
         <ContingenceActionsSection>
-          <Action Name="Console Log action 2" Type="WatchDogService.ContingenceActions.ConsoleAction, WatchDogService" MessageLayout="%date - Console message: %name is not up and running"></Action>
+          <Action Name="Console Log action 2" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not up and running"></Action>
         </ContingenceActionsSection>
       </Watcher>     
 
