Add a third watcher for demo purposes

--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -19,11 +19,17 @@
         </ContingenceActionsSection>
       </Watcher>
 
-      <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.1" Name="localhost watcher" RefreshTimeInSeconds="20">
+      <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.1" Name="host watcher 1" RefreshTimeInSeconds="20">
         <ContingenceActionsSection>
           <Action Name="Console Log action 2" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not up and running"></Action>
         </ContingenceActionsSection>
-      </Watcher>     
+      </Watcher>
+
+      <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.89" Name="host watcher 2" RefreshTimeInSeconds="23">
+        <ContingenceActionsSection>
+          <Action Name="Console Log action 3" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console: %name is not up and running"></Action>
+        </ContingenceActionsSection>
+      </Watcher>
 
     </Watchers>
   </watchDogConfigurationSection>
