--- a/WatchDogService/App.config
+++ b/WatchDogService/App.config
@@ -12,23 +12,29 @@
   <watchDogConfigurationSection>
     <Watchers>
 
-      <Watcher Type="WatchDog.Watchers.WindowsServiceWatcher, WatchDog" ServiceNameToMonitor ="asdasdsad" Name="Temas watcher" RefreshTimeInSeconds="10">
-        <ContingenceActionsSection>
-          <Action Name="Log file action" Type="WatchDog.ContingenceActions.LogFileAction, WatchDog" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
-          <Action Name="Console Log action" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not working"></Action>
-        </ContingenceActionsSection>
+      <Watcher Type="WatchDog.Watchers.WindowsServiceWatcher, WatchDog" ServiceNameToMonitor ="asdasdsad" Name="asdasdsad watcher" RefreshTimeInSeconds="10">
+        <Actions>
+          <Action Name="Log file action" Type="WatchDog.Actions.LogFileAction, WatchDog"  TriggerWhen="NotWorking" FileName="C:\Users\jcerve14\Desktop\LogY.txt" MessageLayout="%date: %name is not working at all"></Action>
+          <Action Name="Console Log action" TriggerWhen="NotWorking" Type="WatchDog.Actions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not working"></Action>
+        </Actions>
+      </Watcher>
+
+      <Watcher Type="WatchDog.Watchers.WindowsServiceWatcher, WatchDog" ServiceNameToMonitor ="Temas" Name="Temas watcher" RefreshTimeInSeconds="10">
+        <Actions>
+          <Action Name="Console Log action" TriggerWhen="Working" Type="WatchDog.Actions.ConsoleAction, WatchDog" MessageLayout="%date - Message: %name is up and running"></Action>
+        </Actions>
       </Watcher>
 
       <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.1" Name="host watcher 1" RefreshTimeInSeconds="20">
-        <ContingenceActionsSection>
-          <Action Name="Console Log action 2" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not up and running"></Action>
-        </ContingenceActionsSection>
+        <Actions>
+          <Action Name="Console Log action 2" TriggerWhen="NotWorking" Type="WatchDog.Actions.ConsoleAction, WatchDog" MessageLayout="%date - Console message: %name is not up and running"></Action>
+        </Actions>
       </Watcher>
 
       <Watcher Type="WatchDog.Watchers.HostWatcher, WatchDog" HostAddress ="192.0.0.89" Name="host watcher 2" RefreshTimeInSeconds="23">
-        <ContingenceActionsSection>
-          <Action Name="Console Log action 3" Type="WatchDog.ContingenceActions.ConsoleAction, WatchDog" MessageLayout="%date - Console: %name is not up and running"></Action>
-        </ContingenceActionsSection>
+        <Actions>
+          <Action Name="Console Log action 3" TriggerWhen="NotWorking" Type="WatchDog.Actions.ConsoleAction, WatchDog" MessageLayout="%date - Console: %name is not up and running"></Action>
+        </Actions>
       </Watcher>
 
     </Watchers>
